updated to build container for dev

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,23 @@
-version: "3.3"
+# version: "3.3"
+# services:
+#   web:
+#     build: .
+#     ports:
+#       - 80:80
+#     volumes: 
+#       - .:/app 
+
+version: "3.4"
 services:
-  web:
+  client:
+    # image: client
+    # restart: on-failure
     build: .
+      # context: ./client
+      # dockerfile: Dockerfile.dev
     ports:
-      - 80:80
-    volumes: 
-      - .:/app 
+      - 5173:5173
+      - 24678:24678
+    volumes:
+      - ./:/app
+      - /app/node_modules
